# terminaler

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_USAGE_INTEGRATION.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  PRIVACY.md  README.md
.cargo/: config.toml
assets/icon/: update.sh
async_ossl/src/: lib.rs
bintree/src/: lib.rs
ci/: deploy.sh  generate-workflows.py
codec/: Cargo.toml
codec/src/: lib.rs
color-types/: Cargo.toml
color-types/src/: lib.rs
config/: Cargo.toml
config/derive/: Cargo.toml
config/derive/src/: attr.rs
config/src/: background.rs  bell.rs  bidi_stub.rs  cell.rs  color.rs  config.rs  daemon.rs  defaults.rs  exec_domain.rs  font.rs  frontend.rs  jsonc.rs  keyassignment.rs  keys.rs  lib.rs  lua.rs  meta.rs  scheme_data.rs  terminal.rs  themes.rs  units.rs  unix.rs  version.rs  web.rs  window.rs  wsl.rs
docs/: changelog.md  scrollback.md
docs/install/: freebsd.md  linux.md  netbsd.md
docs/javascript/: fix-codeblock-console-copy-button.js
env-bootstrap/: Cargo.toml
env-bootstrap/src/: lib.rs  ringlog.rs
filedescriptor/src/: unix.rs
lua-api-crates/plugin/src/: lib.rs
lua-api-crates/serde-funcs/src/: lib.rs
mux/: Cargo.toml
mux/src/: client.rs  connui.rs  domain.rs  lib.rs  localpane.rs  pane.rs  renderable.rs  session_state.rs  ssh.rs  tab.rs  termwiztermtab.rs
procinfo/: Cargo.toml
procinfo/src/: lib.rs
pty/: Cargo.toml
pty/examples/: narrow.rs
pty/src/: lib.rs  serial.rs  unix.rs
pty/src/win/: psuedocon.rs
strip-ansi-escapes/src/: main.rs
term/: Cargo.toml
term/src/: color.rs  config.rs  input.rs  lib.rs  screen.rs  terminal.rs
term/src/terminalstate/: image.rs  iterm.rs  kitty.rs  mod.rs  performer.rs  sixel.rs
term/src/test/: mod.rs
terminaler-blob-leases/: Cargo.toml
terminaler-blob-leases/src/: simple_tempdir.rs
terminaler-cell/: Cargo.toml
terminaler-cell/src/: color.rs  image.rs  lib.rs
terminaler-char-props/: Cargo.toml
terminaler-char-props/codegen/: Cargo.toml
terminaler-cli/: Cargo.toml
terminaler-cli/src/: asciicast.rs  main.rs
terminaler-cli/src/cli/: activate_pane.rs  activate_pane_direction.rs  activate_tab.rs  adjust_pane_size.rs  get_pane_direction.rs  get_text.rs  kill_pane.rs  list.rs  list_clients.rs  mod.rs  move_pane_to_new_tab.rs  notify.rs  proxy.rs  rename_workspace.rs  send_text.rs  set_tab_title.rs  set_window_title.rs  spawn_command.rs  split_pane.rs  tls_creds.rs  zoom_pane.rs
terminaler-client/: Cargo.toml
terminaler-client/src/: client.rs  discovery.rs  domain.rs
terminaler-client/src/pane/: clientpane.rs  mousestate.rs  renderable.rs
terminaler-dynamic/: Cargo.toml
terminaler-dynamic/derive/: Cargo.toml
terminaler-dynamic/derive/src/: attr.rs  fromdynamic.rs  todynamic.rs
terminaler-dynamic/src/: lib.rs
terminaler-dynamic/tests/: fromdynamic.rs  todynamic.rs
terminaler-escape-parser/: Cargo.toml
terminaler-escape-parser/src/: color.rs  csi.rs  error.rs  hyperlink.rs  lib.rs  osc.rs
terminaler-font/: Cargo.toml
terminaler-font/src/: ftwrap.rs  hbwrap.rs  lib.rs  parser.rs  units.rs
terminaler-font/src/locator/: core_text.rs
terminaler-font/src/rasterizer/: colr.rs  freetype.rs
terminaler-font/src/shaper/: harfbuzz.rs  mod.rs
terminaler-gui/: Cargo.toml  build.rs
terminaler-gui-subcommands/: Cargo.toml
terminaler-gui-subcommands/src/: lib.rs
terminaler-gui/assets/: sidebar.html
terminaler-gui/docs/: claude-card-checklist.md  claude-card-integration.md  design-mockup.html
terminaler-gui/src/: commands.rs  customglyph.rs  download.rs  frontend.rs  glyphcache.rs  inputmap.rs  main.rs  renderstate.rs  scrollbar.rs  selection.rs  session.rs  shapecache.rs  spawn.rs  stats.rs  tabbar.rs  update.rs  utilsprites.rs  webview_sidebar.rs
terminaler-input-types/: Cargo.toml
terminaler-input-types/src/: lib.rs
terminaler-layout/: Cargo.toml
terminaler-layout/src/: lib.rs
terminaler-mux-server/: Cargo.toml
terminaler-mux-server-impl/: Cargo.toml
terminaler-mux-server-impl/src/: dispatch.rs  lib.rs  local.rs  pki.rs  sessionhandler.rs
terminaler-mux-server/src/: main.rs  ossl.rs
terminaler-surface/: Cargo.toml
terminaler-surface/src/: bidi_stub.rs  cellcluster.rs  change.rs  hyperlink.rs  lib.rs
terminaler-surface/src/line/: cellref.rs  clusterline.rs  line.rs  test.rs  vecstorage.rs
terminaler-toast-notification/: Cargo.toml
terminaler-toast-notification/src/: lib.rs  slack.rs  windows.rs
terminaler-uds/: Cargo.toml
terminaler-version/: Cargo.toml  build.rs
terminaler-version/src/: lib.rs
terminaler-web/: Cargo.toml
terminaler-web/docs/: custom-terminal-research.md  implementation-checklist.md  json-protocol.md
terminaler-web/src/: ansi_render.rs  auth.rs  bridge.rs  json_render.rs  lib.rs  server.rs  ws_session.rs
terminaler-web/static/: index.html  terminal.html
termwiz/: Cargo.toml
termwiz/data/: terminaler.terminfo
termwiz/examples/: gennerdfonts.rs
termwiz/src/: error.rs  input.rs  lib.rs
wezterm/: Cargo.toml
wezterm-blob-leases/: Cargo.toml
wezterm-cell/src/: image.rs
wezterm-client/: Cargo.toml
wezterm-client/src/: client.rs  domain.rs
wezterm-font/: Cargo.toml
wezterm-font/src/: fcwrap.rs  ftwrap.rs  hbwrap.rs  lib.rs
wezterm-gui/: Cargo.toml
wezterm-gui-subcommands/src/: lib.rs
wezterm-gui/src/: glyphcache.rs  main.rs  renderstate.rs  shapecache.rs  tabbar.rs
wezterm-mux-server/: Cargo.toml
wezterm-mux-server-impl/: Cargo.toml
wezterm-mux-server-impl/src/: dispatch.rs  lib.rs
wezterm-mux-server/src/: main.rs
wezterm-surface/: Cargo.toml
wezterm-surface/src/: bidi_stub.rs  cellcluster.rs  hyperlink.rs  lib.rs
wezterm-toast-notification/: Cargo.toml
wezterm-toast-notification/src/: dbus.rs  lib.rs  macos.rs
wezterm/src/: main.rs
window/: Cargo.toml  build.rs
window/examples/: async.rs
window/src/: connection.rs  egl.rs  lib.rs  spawn.rs
window/src/os/: mod.rs  parameters.rs  stub.rs
window/src/os/macos/: window.rs
window/src/os/wayland/: window.rs
window/src/os/windows/: keycodes.rs  wgl.rs  window.rs
(+66 files in other folders)
