[workspace]
members = [
  "strip-ansi-escapes",
  "terminaler-cli",
  "terminaler-layout",
  "terminaler-blob-leases",
  "terminaler-cell",
  "terminaler-escape-parser",
  "terminaler-dynamic",
  "terminaler-gui",
  "terminaler-mux-server",
  "terminaler-surface",
  "terminaler-uds",
  "terminaler-web",
  "deps/fontconfig",
]
resolver = "2"
exclude = [
  "termwiz/codegen",
  "terminaler-char-props/codegen",
]

[profile.release]
opt-level = 3
# debug = 2

[profile.dev]
# https://jakedeichert.com/blog/reducing-rust-incremental-compilation-times-on-macos-by-70-percent/
# Disabled because it breaks builds on Windows
#split-debuginfo = "unpacked"

[workspace.dependencies]
ahash = "0.8"
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
assert_fs = "1.0.4"
async-channel = "2.3"
async-executor = "1.11"
async-io = "2.3"
async-task = "4.7"
async-trait = "0.1"
backtrace = "0.3"

base64 = {version="0.22", default-features=false }
base91 = { path = "base91" }
benchmarking = "0.4"
bintree = { path = "bintree" }
bitflags = "1.3"
bstr = "1.0"
bytemuck = { version="1.4", features=["derive"]}
bytes = "1.0"
camino = "1.0"
cassowary = "0.3"
cc = {version="1.0", features = ["parallel"]}
chrono = {version="0.4", default-features=false, features=["unstable-locales", "serde", "clock"]}
clap = {version="4.0", features=["derive"]}
clap_complete = "4.4"
clap_complete_fig = "4.0"
clipboard-win = "2.2"
codec = { path = "codec" }
colorgrad = "0.6"
config = { path = "config" }
criterion = "0.5"
crossbeam = "0.8"
csscolorparser = "0.6"
deltae = "0.3"
dhat = "0.3"
dirs-next = "2.0"
dns-lookup = "2.0"
downcast-rs = "1.0"
dwrote = "0.11"
embed-resource = "1.7"
emojis = "0.6"
encoding_rs = "0.8"
enum-display-derive = "0.1"
env-bootstrap = { path = "env-bootstrap" }
env_logger = "0.11"
euclid = {version="0.22", default-features=false}
fancy-regex = {version="0.14", default-features=false, features=[]}
fastrand = "2.0"
filedescriptor = { version="0.8.3", path = "filedescriptor" }
filenamegen = "0.2.6"
finl_unicode = { version = "1.3",  git="https://github.com/wez/finl_unicode.git", branch="no_std" , default-features=false, features=["categories", "grapheme_clusters"]}
fixed = "1.23"
fixedbitset = {version="0.4", default-features=false}
flume = "0.11"
fnv = "1.0"
frecency = { path = "frecency" }
fontconfig = { path = "deps/fontconfig" }
freetype = { path = "deps/freetype" }
futures = "0.3"
futures-lite = "2.3"
futures-util = "0.3"
gethostname = "0.5"
getrandom = "0.3.1"
git2 = { version = "0.20", default-features = false, features = ["https"] }
gl_generator = "0.14"
glium = { version = "0.35", default-features = false }
governor = {version="0.5", default-features=false, features=["std"]}
guillotiere = "0.6"
harfbuzz = { path = "deps/harfbuzz" }
heapless = "0.8"
hdrhistogram = "7.1"
hex = {version="0.4", default-features=false}
hostname = "0.4"
http_req = "0.11"
human-sort = "0.2"
humansize = "2.1"
humantime = "2.1"
image = "0.25"
intrusive-collections = "0.9"
k9 = "0.12.0"
lazy_static = "1.4"
leb128 = "0.2"
lfucache = { path = "lfucache" }
libc = "0.2"
libflate = "2"
libloading = "0.8"
line_drawing = "0.8"
log = "0.4"
lru = "0.16"
maplit = "1.0"
memmap2 = "0.9"
memmem = "0.1"
metrics = "0.23"
miniz_oxide = "0.7"
mio = "0.8"
# STRIPPED: mlua = "0.9" (Lua scripting replaced by JSON config in Phase 1)
mux = { path = "mux" }
names = { version = "0.12", default-features = false }
nix = "0.29"
notify = "5.0.0"
signal-hook = "0.3"
termios = "0.3"
ntapi = "0.4"
nucleo-matcher = "0.3"
num = "0.4"
num-derive = "0.4"
num-traits = {version="0.2", default-features=false }
ordered-float = {version="4.1", default-features=false}
parking_lot = "0.12"
percent-encoding = "2.3"
pest = "2.7"
pest_derive = "2.7"
phf = {version="0.11", default-features=false}
phf_codegen = "0.10"
pkg-config = "0.3"
portable-pty = { path = "pty" }
predicates = "3.0"
proc-macro2 = "1.0"
procinfo = { path = "procinfo" }
promise = { path = "promise" }
quote = "1.0.2"
rand = { version = "0.9", default-features = false, features = ["std", "std_rng"] }
rangeset = { path = "rangeset" }
ratelim= { path = "ratelim" }
raw-window-handle = "0.6"
rayon = "1.10"
regex = "1"
reqwest = "0.12"
resize = "0.5"
rstest = "0.21"
rusqlite = "0.32"
serde = {version="1.0", default-features=false, features = ["derive"]}
serde_json = "1.0"
serde_with = {version="2.0", features = ["chrono_0_4"]}
serde_yaml = "0.9"
sha2 = "0.10"
shared_library = "0.1"
shell-words = "1.1"
shlex = "1.1"
siphasher = "1.0.1"
smol = "2.0"
socket2 = "0.5"
spa = "0.3.1"
sqlite-cache = "0.1.4"
strsim = "0.11"
syn = "1.0"
tabout = { path = "tabout" }
tar = "0.4"
tempfile = "3.20"
terminfo = "0.9"
termwiz = { version="0.24.0", path = "termwiz" }
textwrap = "0.16"
thiserror = "1.0"
tiny-skia = "0.11"
tokio = "1.43"
toml = "0.8"
ucd-trie = {version="0.1", default-features=false}
uds_windows = "1.1"
umask = { path = "umask" }
unicode-normalization = "0.1.24"
unicode-segmentation = "1.12"
url = "2"
utf8parse = "0.2"
uuid = "1.13"
varbincode = "0.1"
vtparse = { version="0.7", path="vtparse", default-features=false }
walkdir = "2"
terminaler-blob-leases = { version="0.1.1", path = "terminaler-blob-leases"}
terminaler-layout = { path = "terminaler-layout" }
terminaler-cell = { path = "terminaler-cell"}
terminaler-char-props = { path = "terminaler-char-props", default-features=false }
terminaler-client = { path = "terminaler-client" }
terminaler-color-types = { version="0.3", path = "color-types", default-features=false }
terminaler-config-derive = { version="0.1", path="config/derive" }
terminaler-dynamic = { version = "0.2.1", path = "terminaler-dynamic", default-features=false }
terminaler-dynamic-derive = { version="0.1.1", path="terminaler-dynamic/derive" }
terminaler-escape-parser = { version="0.1.0", path="terminaler-escape-parser" }
terminaler-font = { path = "terminaler-font" }
terminaler-gui-subcommands = { path = "terminaler-gui-subcommands" }
terminaler-input-types = { version="0.1", path = "terminaler-input-types", default-features=false }
terminaler-mux-server-impl = { path = "terminaler-mux-server-impl" }
terminaler-surface = { path = "terminaler-surface" }
terminaler-term = { path = "term" }
terminaler-toast-notification = { path = "terminaler-toast-notification" }
terminaler-uds = { path = "terminaler-uds" }
terminaler-web = { path = "terminaler-web" }
terminaler-version = { path = "terminaler-version" }
wgpu = "25.0.2"
whoami = "1.5"
winapi = "0.3.9"
window = {path="window"}
windows = "0.33.0"
winreg = "0.10"
xml-rs = "0.8"
zstd = "0.11"
