[package]
name = "env-bootstrap"
version = "0.1.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace.workspace = true
chrono.workspace = true
config.workspace = true
dirs-next.workspace = true
env_logger = "0.10" # Note: we rely on filter::Builder which is gone in 0.11
lazy_static.workspace = true
libc.workspace = true
log.workspace = true
termwiz.workspace = true
terminaler-version.workspace = true

[target."cfg(windows)".dependencies]
winapi.workspace = true
