[package]
name = "portable-pty"
version = "0.9.0"
authors = ["Wez Furlong"]
edition = "2018"
repository = "https://github.com/wezterm/wezterm"
description = "Cross platform pty interface"
license = "MIT"
documentation = "https://docs.rs/portable-pty"

[dependencies]
anyhow.workspace = true
downcast-rs.workspace = true
filedescriptor.workspace = true
libc.workspace = true
log.workspace = true
serde = {workspace=true, optional=true, features=["derive"]}
shell-words.workspace = true

[features]
default = []
serde_support = ["serde"]

[target."cfg(unix)".dependencies]
nix = {workspace=true, features=["term", "fs"]}

[target."cfg(windows)".dependencies]
bitflags.workspace = true
lazy_static.workspace = true
shared_library.workspace = true
winapi = { workspace=true, features = [
    "winuser",
    "consoleapi",
    "handleapi",
    "fileapi",
    "namedpipeapi",
    "synchapi",
]}
winreg.workspace = true

[dev-dependencies]
futures.workspace = true
smol.workspace = true
