[package]
authors = ["Wez Furlong"]
name = "terminaler-cell"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/wezterm/wezterm"
description = "Model a Cell in a Terminal display"
license = "MIT"
documentation = "https://docs.rs/terminaler-cell"
keywords = ["terminal", "cell"]

[dependencies]
finl_unicode.workspace = true
image = {workspace=true, optional=true}
log = {workspace = true, optional=true}
ordered-float = {workspace = true, optional=true}
sha2 = {workspace=true, optional=true}
serde = {workspace=true, optional=true}
thiserror = {workspace=true, optional=true}
terminaler-blob-leases = {workspace = true, optional=true}
terminaler-char-props.workspace = true
terminaler-color-types.workspace = true
terminaler-escape-parser.workspace = true
terminaler-dynamic.workspace = true

[features]
std = ["serde/std", "terminaler-char-props/std", "terminaler-color-types/std", "terminaler-escape-parser/std", "terminaler-dynamic/std", "finl_unicode/std"]
use_serde = ["dep:serde", "terminaler-color-types/use_serde"]
use_image = ["dep:image", "dep:terminaler-blob-leases", "dep:log", "dep:ordered-float", "dep:sha2", "dep:thiserror"]

[dev-dependencies]

