[package]
authors = ["Wez Furlong"]
name = "terminaler-surface"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/wezterm/wezterm"
description = "Surface and Line types for terminals"
license = "MIT"
documentation = "https://docs.rs/terminaler-surface"
keywords = ["terminal", "surface", "line"]

[dependencies]
bitflags = "2.0"
fancy-regex.workspace = true
finl_unicode.workspace = true
fixedbitset.workspace = true
ordered-float.workspace = true
serde = {workspace=true, optional=true}
siphasher.workspace = true
unicode-segmentation.workspace = true
terminaler-blob-leases = {workspace=true, optional=true}
terminaler-cell = {workspace = true}
terminaler-char-props.workspace = true
terminaler-color-types = {workspace = true}
terminaler-dynamic = {workspace = true}
terminaler-escape-parser = {workspace = true}
terminaler-input-types.workspace = true

[features]
default = []
std = ["fancy-regex/std", "terminaler-cell/std", "terminaler-dynamic/std", "terminaler-escape-parser/std", "fixedbitset/std", "fancy-regex/perf", "fancy-regex/unicode"]
appdata = ["std"]
use_serde = ["serde"] #, "terminaler-color-types/use_serde", "terminaler-blob-leases/serde", "bitflags/serde", "terminaler-input-types/serde", "terminaler-escape-parser/use_serde", "terminaler-cell/use_serde"]
use_image = ["terminaler-cell/use_image"] # "image", "dep:image", "terminaler-escape-parser/use_image", "terminaler-escape-parser/kitty-shm", "terminaler-cell/use_image"]

[dev-dependencies]
k9.workspace = true

