[package]
name = "terminaler-toast-notification"
version = "0.1.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2018"
build = "build.rs"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
# STRIPPED: terminaler-open-url.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { workspace=true, features = [
    "Data_Xml_Dom",
    "Foundation",
    "UI_Notifications",
    "Win32_Foundation",
]}
xml-rs.workspace = true
