[package]
name = "terminaler-web"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
axum.workspace = true
config.workspace = true
crossbeam.workspace = true
dirs-next.workspace = true
futures-util.workspace = true
hex.workspace = true
log.workspace = true
mux.workspace = true
promise.workspace = true
rand.workspace = true
rangeset.workspace = true
serde.workspace = true
serde_json.workspace = true
terminaler-cell.workspace = true
terminaler-color-types.workspace = true
terminaler-escape-parser.workspace = true
terminaler-surface.workspace = true
terminaler-term.workspace = true
termwiz.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros", "time"] }
