[package]
name = "window"
version = "0.1.0"
authors = ["Wez Furlong"]
edition = "2018"
repository = "https://github.com/wezterm/wezterm"
description = "Cross platform window setup and render"
license = "MIT"
build = "build.rs"

[dev-dependencies]
k9.workspace = true

[build-dependencies]
gl_generator.workspace = true

[features]

[dependencies]
async-channel.workspace = true
async-io.workspace = true
async-task.workspace = true
async-trait.workspace = true
anyhow.workspace = true
bytes.workspace = true
config.workspace = true
downcast-rs.workspace = true
thiserror.workspace = true
bitflags.workspace = true
euclid.workspace = true
guillotiere.workspace = true
lazy_static.workspace = true
libloading.workspace = true
line_drawing.workspace = true
log.workspace = true
metrics.workspace = true
promise.workspace = true
raw-window-handle.workspace = true
resize.workspace = true
serde = {workspace=true, features = ["rc", "derive"]}
tiny-skia.workspace = true
glium.workspace = true
url.workspace = true
# STRIPPED: terminaler-bidi.workspace = true
terminaler-color-types.workspace = true
terminaler-font.workspace = true
terminaler-input-types.workspace = true

[target."cfg(windows)".dependencies]
clipboard-win.workspace = true
shared_library.workspace = true
winapi = { workspace=true, features = [
    "dwmapi",
    "handleapi",
    "imm",
    "libloaderapi",
    "shellscalingapi",
    "synchapi",
    "sysinfoapi",
    "winerror",
    "winuser",
]}
windows = { workspace=true, features = [
    "UI_ViewManagement",
    "Win32_Devices_Display",
]}
winreg.workspace = true
